--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;" />
     <title>VEO3 Automation Tool</title>
 </head>
 
 <body>
     <div id="root"></div>
-    <script type="module" src="/src/renderer/main.jsx"></script>
+    <script type="module" src="/main.jsx"></script>
 </body>
 
 </html>
